# fourway-ssdu-residual-risk-materials

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: exp001_data_audit_manifest.yaml  exp002_fourway_masks.yaml  exp006_reliability_cache_full.yaml  exp008_reliability_ablation_full.yaml  exp009_holdout_verification_full.yaml  exp010_bootstrap_metrics.yaml  exp010_conformal_bounds.yaml  exp010_generate_figures.yaml  exp010_generate_overlay_figures_auprc_selected.yaml
docs/: data_access.md  expected_outputs.md  reproduction.md
paper/captions/: reports__manuscript_assets__tables__table1_lambda_hold_test_metrics.md  reports__manuscript_assets__tables__table2_conformal_bounds.md  reports__manuscript_assets__tables__table3_bootstrap_ci.md  reports__manuscript_assets__tables__table4_paired_bootstrap_differences.md  reports__milestones__experiment_008_ablation_design.md  reports__milestones__experiment_008_ablation_results.md  reports__milestones__experiment_009_holdout_verification_full.md  reports__publication_v05__captions__figure_3_caption.md  (+10 more)
scripts/: exp001_data_audit_manifest.py  exp002_generate_fourway_masks.py  exp005_generate_residual_targets_v2.py  exp006_build_reliability_cache.py  exp008_train_reliability_ablation.py  exp009_holdout_verification.py  exp010_bootstrap_metrics.py  exp010_compute_conformal_bounds.py  exp010_generate_figures.py  exp010_generate_overlay_figures.py
tests/: test_imports.py  test_masks.py  test_operators.py  test_reliability_inputs.py  test_residuals.py  test_torch_fft.py
(+104 files in other folders)
