[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fourway-mri"
version = "0.1.0"
description = "Four-way acquired k-space partitioning for residual-risk verification in self-supervised accelerated brain MRI"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
